sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:5: error: Float.type does not take parameters
      ecart = Float(ecart)/1.3
                   ^